; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_namespace.c_append_protect_home.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_namespace.c_append_protect_home.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@protect_home_read_only_table = common dso_local global i32 0, align 4
@protect_home_tmpfs_table = common dso_local global i32 0, align 4
@protect_home_yes_table = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Unexpected ProtectHome= value\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32, i32)* @append_protect_home to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @append_protect_home(i32** %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32**, i32*** %5, align 8
  %9 = call i32 @assert(i32** %8)
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %33 [
    i32 131, label %11
    i32 130, label %12
    i32 129, label %19
    i32 128, label %26
  ]

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %35

12:                                               ; preds = %3
  %13 = load i32**, i32*** %5, align 8
  %14 = load i32, i32* @protect_home_read_only_table, align 4
  %15 = load i32, i32* @protect_home_read_only_table, align 4
  %16 = call i32 @ELEMENTSOF(i32 %15)
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @append_static_mounts(i32** %13, i32 %14, i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  br label %35

19:                                               ; preds = %3
  %20 = load i32**, i32*** %5, align 8
  %21 = load i32, i32* @protect_home_tmpfs_table, align 4
  %22 = load i32, i32* @protect_home_tmpfs_table, align 4
  %23 = call i32 @ELEMENTSOF(i32 %22)
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @append_static_mounts(i32** %20, i32 %21, i32 %23, i32 %24)
  store i32 %25, i32* %4, align 4
  br label %35

26:                                               ; preds = %3
  %27 = load i32**, i32*** %5, align 8
  %28 = load i32, i32* @protect_home_yes_table, align 4
  %29 = load i32, i32* @protect_home_yes_table, align 4
  %30 = call i32 @ELEMENTSOF(i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @append_static_mounts(i32** %27, i32 %28, i32 %30, i32 %31)
  store i32 %32, i32* %4, align 4
  br label %35

33:                                               ; preds = %3
  %34 = call i32 @assert_not_reached(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %35

35:                                               ; preds = %11, %12, %19, %26, %33
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @assert(i32**) #1

declare dso_local i32 @append_static_mounts(i32**, i32, i32, i32) #1

declare dso_local i32 @ELEMENTSOF(i32) #1

declare dso_local i32 @assert_not_reached(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
